add product route

--- a/cloud-test/templates/about-us.html
+++ b/cloud-test/templates/about-us.html
@@ -7,6 +7,6 @@
   <body>
     <h1> About Website </h1>
     <p> Flask is a top Python framwork</p>
-    <p> blah blah blah ...</p>
+    <p> blah blah blah blah...</p>
   </body>
 </html>
